# ratatui

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
examples/apps/async-github/src/: main.rs
examples/apps/demo/: Cargo.toml
examples/apps/demo/src/: main.rs  termina.rs
examples/demo/: main.rs
ratatui/: Cargo.toml
ratatui-termina/: Cargo.toml
ratatui-termina/src/: lib.rs
ratatui/examples/: colors_rgb.rs
ratatui/src/: lib.rs
src/: backend.rs  prelude.rs
src/style/: stylize.rs
tests/: backend_termion.rs
